# observability-libs

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: ci.yaml  issues.yaml
lib/charms/observability_libs/v0/: cert_handler.py  cert_manager.py  juju_topology.py  kubernetes_compute_resources_patch.py  kubernetes_service_patch.py  metrics_endpoint_discovery.py
lib/charms/observability_libs/v1/: cert_handler.py  kubernetes_compute_resources_patch.py  kubernetes_service_patch.py
lib/charms/observability_libs/v2/: kubernetes_service_patch.py
placeholder/: README.md  pyproject.toml  tox.ini
placeholder/src/cosl/: __init__.py  cos_tool.py  juju_topology.py
placeholder/src/jo11y/: __init__.py  cos_tool.py
placeholder/tests/: test_cos_tool.py  test_juju_topology.py  test_juju_topology_from_charm.py
src/: charm.py
tests/: test_juju_topology.py  test_kubernetes_compute_resources.py  test_kubernetes_service.py  test_kubernetes_service_v1.py  test_kubernetes_service_v2.py  test_metrics_endpoint_discovery.py
tests/integration/: conftest.py  helpers.py  test_cert_handler_v1.py  test_compute_resources_patch.py
tests/integration/tester-charm/: charmcraft.yaml  metadata.yaml  requirements.txt
tests/integration/tester-charm/src/: charm.py
tests/scenario/test_cert_handler/: test_cert_handler.py  test_cert_handler_v1.py
tests/unit/: helpers.py  test_cert_handler_v0.py  test_cert_handler_v0_scenario.py  test_cert_handler_v1.py  test_cert_handler_v1_scenario.py  test_juju_topology.py  test_kubernetes_compute_resources.py  test_kubernetes_compute_resources_v0.py  test_kubernetes_compute_resources_v1.py  test_kubernetes_service.py  test_metrics_endpoint_discovery.py
